@startuml

interface Door{
    void lock()
    void unlock()
    void open()
    void close()
    void timeOutCallback()
    void proximityCallback()
}

class SensingDoor implements Door{
    - boolean _locked;
    - boolean _opened;
    + SensingDoor(Sensor sensor)
    + void lock()
    + void unlock()
    + void open()
    + void close()
    + void timeOutCallback()
    + void proximityCallback()
}

class TimedDoor implements Door{
    - {static} int TIME_OUT;
    - boolean _locked;
    - boolean _opened;
    + TimedDoor(Timer timer)
    + void lock()
    + void unlock()
    + void open()
    + void close()
    + void timeOutCallback()
    + void proximityCallback()
}

class Sensor{
    + void register(Door door)
    - boolean isPersonClose()
}

class Timer{
    + void register(long timeOut, final Door door)
}

Sensor ..> Door
Timer ..> Door
TimedDoor ..> Timer
SensingDoor ..> Sensor
@enduml